// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrowdsaleEndTime Rendering should render CrowdsaleEndTime component 1`] = `
<div>
  <label
    className="label"
    htmlFor="tiers[0].endTime"
  >
    End Time
  </label>
  <input
    autoComplete="off"
    className="input"
    disabled={false}
    id="tiers[0].endTime"
    name="tiers[0].endTime"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="datetime-local"
    value={1521716400000}
  />
  <p
    className="description"
  >
    Date and time when the tier ends. Can be only in the future.
  </p>
  <span>
    <p
      className="error"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    />
  </span>
</div>
`;

exports[`CrowdsaleEndTime Rendering should render CrowdsaleEndTime component if field is disabled 1`] = `
<div>
  <label
    className="label"
    htmlFor="tiers[0].endTime"
  >
    End Time
  </label>
  <input
    autoComplete="off"
    className="input"
    disabled={true}
    id="tiers[0].endTime"
    name="tiers[0].endTime"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="datetime-local"
    value={1521716400000}
  />
  <p
    className="description"
  >
    Date and time when the tier ends. Can be only in the future.
  </p>
  <span>
    <p
      className="error"
      style={
        Object {
          "color": "red",
          "fontWeight": "bold",
        }
      }
    />
  </span>
</div>
`;
